# scholarflow-ocr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: server-integration.md
docs/plans/: 2026-07-07-scholarflow-ocr.md
docs/specs/: 2026-07-07-scholarflow-ocr-design.md
scripts/: capture_fixture.py
src/scholarflow_ocr/: api.py  config.py  main.py  pdfmeta.py
src/scholarflow_ocr/ocr/: client.py  fake.py  models.py
src/scholarflow_ocr/parse/: coords.py  document.py  frontmatter.py  layout.py  pipeline.py  references.py  text.py
src/scholarflow_ocr/tei/: render.py
tests/: conftest.py  test_api.py  test_config.py  test_contract.py  test_coords.py  test_frontmatter.py  test_health.py  test_layout.py  test_ocr_client.py  test_pdfmeta.py  test_pipeline.py  test_pipeline_real.py  test_references.py  test_tei_render.py
tests/fixtures/: real_slice_parse_result.json  sample_parse_result.json
